Style the app with css and bootstrap.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Blogs</title>
-  </head>
-  <body>
-    <div class="">
-      <h1> BLOGS LIST</h1>
-      {% for post in posts %}
-      <div class="">
-        <h2><a href="{% url 'detail' post.pk %}">{{post.title}}</a></h2>
-        <p>published date:{{post.published_date}}</p>
-        <p>{{post.text|linebreaksbr}}</p>
-      </div>
-      {% endfor %}
-
-
-
-
-
-
-
-
+{% extends 'blog/base.html' %}
+  {% block content %}
+    {% for post in posts %}
+    <div class="post">
+      <h2><a href="{% url 'detail' post.pk %}">{{post.title}}</a></h2>
+      <p class="publish">Published:{{post.published_date}}</p>
+      <p>{{post.text|linebreaksbr}}</p>
     </div>
+    {% endfor %}
 
 
 
-  </body>
-</html>
+  {% endblock %}
