--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="">
-      {% if post.published_date %}
-        <div class="">
-          <h2>{{post.title}}</h2>
-          <p>Published:{{post.published_date}}</p>
-          <p>{{post.text|linebreaksbr}}</p>
-      {% endif %}
+{% extends 'blog/base.html' %}
+  {% block content %}
 
-        </div>
+    {% if post.published_date %}
+      <div class="post">
+        <h2>{{post.title}}</h2>
+        <p class="publish">Published:{{post.published_date}}</p>
+        <p>{{post.text|linebreaksbr}}</p>
+    {% endif %}
+      </div>
 
-    </div>
-  </body>
-</html>
+  {% endblock %}
