--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -24,8 +24,16 @@ h1,h2,h3,h4 {
 
 .post {
   margin-bottom: 70px;
-  
+
 }
 .post h2 a{
   color:#000000;
+}
+
+.form-post textarea{
+  width:100% !important;
+}
+
+.form-post .btn-primary{
+  float:right;
 }
