--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,7 +13,9 @@
   <body>
     <div class="">
       <div class="page-header">
-          <h1><a href="{% url 'post_list' %}">BLOGS LIST</a> </h1>
+
+          <h1><a href="{% url 'post_list' %}">BLOGS LIST</a> {% if user.is_authenticated %}<a href="{% url "new_post" %}" class="top-menu"><i class="fas fa-plus-square fa-1.5x"></i></a>{% endif %}</h1>
+
 
       </div>
       <div class="content container">
