--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,7 +4,9 @@
     {% if post.published_date %}
       <div class="post">
         <p class="publish">Published:{{post.published_date}}</p>
+          {% if user.is_authenticated %}
           <a href="{% url 'edit_post' post.pk %}"><i class="fas fa-pen-fancy fa-2x fa-spin"></i></a>
+          {% endif %}
         <h2>{{post.title}}</h2>
 
         <p>{{post.text|linebreaksbr}}</p>
