--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,11 @@
     <div class="">
       <div class="page-header">
 
-          <h1><a href="{% url 'post_list' %}">BLOGS LIST</a> {% if user.is_authenticated %}<a href="{% url "new_post" %}" class="top-menu"><i class="fas fa-plus-square fa-1.5x"></i></a>{% endif %}</h1>
+          <h1><a href="{% url 'post_list' %}">BLOGS LIST</a>
+            {% if user.is_authenticated %}
+            <a href="{% url "new_post" %}" class="top-menu"><i class="fas fa-plus-square fa-1.5x"></i></a>
+            <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fab fa-firstdraft fa-1.5x"></i></a>
+            {% endif %}</h1>
 
 
       </div>
