--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
   {% block content %}
 
-    {% if post.published_date %}
+    {% if post.created_date %}
       <div class="post">
         <p class="publish">Published:{{post.published_date}}</p>
           {% if user.is_authenticated %}
@@ -10,6 +10,11 @@
         <h2>{{post.title}}</h2>
 
         <p>{{post.text|linebreaksbr}}</p>
+        {% if not post.published_date %}
+
+        <a href="{% url "post_publish" post.pk %}"><button type="button" name="button">Publish</button></a>
+
+        {% endif %}
     {% endif %}
 
       </div>
