--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -21,13 +21,19 @@ h1,h2,h3,h4 {
 .publish {
   color: 	#A9A9A9;
 }
-
+.comment {
+    margin: 20px 0px 20px 20px;
+}
 .post {
   margin-bottom: 70px;
 
 }
 .post h2 a{
   color:#000000;
+}
+h1 p {
+  color: #e5e2d3
+
 }
 
 .form-post textarea{
