--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/style.css' %}">
     <meta charset="utf-8">
-    <title>Blogs</title>
+    <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
     <div class="">
@@ -16,9 +16,17 @@
 
           <h1><a href="{% url 'post_list' %}">BLOGS LIST</a>
             {% if user.is_authenticated %}
+
             <a href="{% url "new_post" %}" class="top-menu"><i class="fas fa-plus-square fa-1.5x"></i></a>
             <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fab fa-firstdraft fa-1.5x"></i></a>
-            {% endif %}</h1>
+            <small><a href="{% url 'logout' %}" class="top-menu"><i class="fas fa-sign-out-alt" data-toggle="tooltip" data-placement="top" title="logout"></i></a></small>
+            <p class="top-menu">Hi {{user.username}},</p>
+
+            {% else %}
+            <a href="{% url "login" %}" class="top-menu"><i class="fas fa-sign-in-alt fa-1.5x"></i></a>
+            {% endif %}
+
+          </h1>
 
 
       </div>
@@ -28,7 +36,7 @@
             {% block content %}
             {% endblock %}
 
-
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
           </div>
         </div>
       </div>
