--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+{{post.title}}
+{% endblock %}
   {% block content %}
 
     {% if post.created_date %}
@@ -6,6 +9,7 @@
         <p class="publish">Published:{{post.published_date}}</p>
           {% if user.is_authenticated %}
           <a href="{% url 'edit_post' post.pk %}"><i class="fas fa-pen-fancy fa-2x fa-spin"></i></a>
+          <a href="{% url 'post_delete' post.pk  %}"><i class="fas fa-trash fa-2x"></i></a>
           {% endif %}
         <h2>{{post.title}}</h2>
 
@@ -15,6 +19,22 @@
         <a href="{% url "post_publish" post.pk %}"><button type="button" name="button">Publish</button></a>
 
         {% endif %}
+        <a class ="btn btn-primary" href="{% url 'add_comment' pk=post.pk %}">Add Comment</a>
+        {% for comment in post.comments.all %}
+          <div class="comment">
+            <strong>{{comment.author}}</strong>
+            <p class="publish">{{comment.created_date}}</p>
+            {% if not comment.approved_comment %}
+                <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+            {% endif %}
+            <p>{{comment.text}}</p>
+          {% empty %}
+            <p>No comments yet..</p>
+
+          </div>
+
+        {% endfor %}
     {% endif %}
 
       </div>
