--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+new post
+{% endblock %}
 {% block content %}
   <h1 class="">New Post</h1>
   <div class="">
