--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,14 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+My blog
+{% endblock %}
   {% block content %}
     {% for post in posts %}
     <div class="post">
       <h2><a href="{% url 'detail' post.pk %}">{{post.title}}</a></h2>
       <p class="publish">Published:{{post.published_date}}</p>
       <p>{{post.text|linebreaksbr}}</p>
+      <a href="{% url 'detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
     </div>
     {% endfor %}
 
