add markdownify, zenburn.css and requirements.txt

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/style.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/zenburn.css' %}">
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
   </head>
